2009-01-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Fix issue 441.
	* src/algebra/defintrf.spad.pamphlet: findRealZero(): Remove
	multiple zeros.

2009-01-13  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/input/bugs2009.input.pamphlet: add issue #442

	* src/input/bugs2009.input.pamphlet: add issues #138, #439, #436,
	#360, #440, #441

	* src/input/elemnum.input.pamphlet: add reference

	* src/input/bugs2008.input.pamphlet: correct test #301, add
	expected(), fix some formatting.

2008-01-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/efstruc.spad.pamphlet: Better normalization.
	src/input/bugs2009.input.pamphlet: New file.
	src/input/Makefile.in: Adjust.

2008-01-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/coerce.spad.pamphlet,
	src/algebra/exposed.lsp.pamphlet,
	src/interp/as.boot, src/interp/br-con.boot,
	src/interp/br-data.boot, src/interp/br-util.boot,
	src/interp/cattable.boot, src/interp/c-util.boot,
	src/interp/interop.boot, src/interp/nrunopt.boot,
	src/interp/parsing.lisp: Misc cleanups.

2008-01-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/array1.spad.pamphlet: FlexibleArray,
	IndexedFlexibleArray: Doc fix.

2008-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Avoid breakage due to cleanup in r463.
	* src/interp/br-op1.boot: dbShowOp1(): Allow integer
	valued keys.

2008-01-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Avoid referencing build directory when using ECL.
	* src/interp/util.lisp: interpsys-ecl-image-init(): call
	initroot and use value of $spadroot instead of frozen
	build value.

2008-01-07  Aleksej Saushev <asau@inbox.ru>

	Fix bootstrap failure with ECL on NetBSD.
	* src/lisp/fricas-lisp.lisp: For ECL on NetBSD and :unix
	to featues.

2008-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/input/intef2.input.pamphlet,
	src/input/intmix2.input.pamphlet: Remove redundant test files.
	src/input/calculus2.input.pamphlet: Remove redundant unused