@@ -1,0 +1,184 @@
+\documentclass{article}
+\usepackage{axiom,url}
+\begin{document}
+\title{\$SPAD/src/input mantepse.input}
+\author{Martin Rubey}
+\maketitle
+\begin{abstract}
+\end{abstract}
+\eject
+\tableofcontents
+\eject
+\section{Testing mantepse.spad.pamphlet}
+We want to test whether the guessing facility work correctly.  In particular,
+we check whether the number of terms needed is correct, depending on the option
+\spadfun{safety}.  We also should test the option \spadfun{allDegrees}.
+
+<<*>>=
+)set break resume
+)expose UnittestCount UnittestAux Unittest
+)expose RECOP
+testsuite "guessing"
+<<TEST guessRat>>
+<<TEST guessPade>>
+<<TEST guessAlg>>
+<<TEST guessPRec>>
+<<TEST guessADE>>
+<<TEST guessRec>>
+<<TEST guessExpRat>>
+<<TEST guessBinRat>>
+<<TEST guess>>
+@
+<<*>>=
+expected() ==    
+    messagePrint("testsuite | testcases: failed (total) | tests: failed (total)")$OutputForm
+    messagePrint("guessing                    1    (10)               1    (23)")$OutputForm
+   
+statistics()
+expected()
+@
+%$
+\subsection{rational expressions}
+
+<<TEST guessRat>>=
+testcase "guessRat$GUESSINT"
+GUESSRESULT ==> Record(function: EXPR INT, order: NNI)
+testEquals("# guessRat [0,1,4]",   
+           "0")
+testEquals("# guessRat [0]",
+           "0")
+testEquals("guessRat [1,1]", 
+           "[[1, 0]$GUESSRESULT]")
+testEquals("guessRat [0,0]", 
+           "[[0, 0]$GUESSRESULT]")
+testEquals("guessRat [0,1,4,9]", 
+           "[[n^2, 0]$GUESSRESULT]")
+testEquals("guessRat([0,1,4,9,16], safety==2)", 
+           "[[n^2, 0]$GUESSRESULT]")
+testEquals("guessRat [3, 4, 7/2, 18/5, 11/3, 26/7]", 
+           "[[(4*n+6)/(n+2),2]$GUESSRESULT]")
+
+testcase "guessRat$GUESSP"
+GUESSRESULT ==> Record(function: EXPR INT, order: NNI)
+testEquals("guessRat(q)([1,q,q^2], [])",
+           "[[q^n,0]$GUESSRESULT]")
+@
+\subsection{rational functions}
+
+<<TEST guessPade>>=
+testcase "guessPade$GUESSINT"
+GUESSRESULT ==> Record(function: EXPR INT, order: NNI)
+f := operator 'f
+-- two terms for guessing, which allows rational functions with total degree 1
+testEquals("getEq guessPade([1,1,1]).1.function",
+           "(x-1)*f(x)+1")
+testEquals("# guessPade([1,1,2,3], allDegrees==false)",
+           "0")
+testEquals("getEq guessPade([1,1,2,3], allDegrees==true).1.function",
+           "(x^2+x-1)*f(x)+1")
+
+@
+%$
+
+\subsection{algebraic functions}
+<<TEST guessAlg>>=
+testcase "guessAlg$GUESSINT"
+GUESSRESULT ==> Record(function: EXPR INT, order: NNI)
+f := operator 'f
+-- 3 terms, total number of parameters is 3
+testEquals("getEq guessAlg([1/(2*n+1)*binomial(2*n+1, n) "
+                           "for n in 0..3]).1.function",
+           "x*f(x)^2-f(x)+1")
+@
+%$
+
+\subsection{holonomic functions}
+
+<<TEST guessPRec>>=
+testcase "guessPRec$GUESSINT"
+GUESSRESULT ==> Record(function: EXPR INT, order: NNI)
+f := operator 'f
+-- central binomial coefficients
+-- 5 terms, shifting eliminates 1, but total number of parameters is 5
+testEquals("# guessPRec([1,2,6,20,70,252])",
+           "0")
+
+-- 3 terms, but shifting eliminates one
+testEquals("# guessPRec([1,2,6,20], homogeneous==true, allDegrees==true)",
+           "0")
+testEquals("getEq guessPRec([1,2,6,20,70], homogeneous==true).1.function",
+           "(n+1)*f(n+1)-2*(2*n+1)*f(n)")
+testEquals("getEq guessPRec([1,2,6,20,70], allDegrees==true).1.function",
+           "(n+1)*f(n+1)-2*(2*n+1)*f(n)")
+@
+%$
+
+\subsection{differentially algebraic functions}
+<<TEST guessADE>>=
+testcase "guessADE$GUESSINT"
+GUESSRESULT ==> Record(function: EXPR INT, order: NNI)
+f := operator 'f
+-- Lambert W
+testEquals("getEq guessADE([n^n/factorial n for n in 0..6]).1.function",
+           "-x*D(f x, x) + f(x)^3-f(x)^2")
+
+-- q-Carlitz
+l := [1, 1, q+1, q^3+q^2+2*q+1, q^6+q^5+2*q^4+3*q^3+3*q^2+3*q+1, _
+      q^10+q^9+2*q^8+3*q^7+5*q^6+5*q^5+7*q^4+7*q^3+6*q^2+4*q+1];
+testEquals("getEq guessADE(q)(l, maxPower==2).1.function",
+           "-x*f(x)*f(q*x)+f(x)-1")
+
+
+@
+%$
+
+\subsection{general recurrences}
+<<TEST guessRec>>=
+testcase "guessRec$GUESSINT"
+GUESSRESULT ==> Record(function: EXPR INT, order: NNI)
+f := operator 'f
+-- Somos 4
+s: INT -> INT; 
+s(0)==1; s(1)==1; s(2)==1; s(3)==1; 
+s(n)==(s(n-1)*s(n-3)+s(n-2)^2)/s(n-4);
+testEquals("getEq guessRec([s m for m in 0..18], maxPower==2).1.function",
+           "f(n)*f(n+4)-f(n+1)*f(n+3)-f(n+2)^2")
+@
+%$
+
+\subsection{guess Abelian and Binomial terms}
+<<TEST guessExpRat>>=
+testcase "guessExpRat$GUESSINT"
+GUESSRESULT ==> Record(function: EXPR INT, order: NNI)
+f := operator 'f
+testEquals("guessExpRat([0,3,32,375,5184])",
+           "[[n*(n + 2)^n, 0]$GUESSRESULT]")
+@
+
+<<TEST guessBinRat>>=
+testcase "guessBinRat$GUESSP"
+GUESSRESULT ==> Record(function: EXPR INT, order: NNI)
+f := operator 'f
+testEquals("guessBinRat([1,1,k+1,(3*k*k+5*k+2)/2,(8*k**3+18*k*k+13*k+3)/3]).1.function",
+           "binomial((k+1)*n, n)/(k*n+1)")
+@
+
+\subsection{guess products and sums}
+<<TEST guess>>=
+testcase "guess$GUESSINT"
+GUESSRESULT ==> Record(function: EXPR INT, order: NNI)
+f := operator 'f
+-- Robbins numbers
+testEquals("guess([1,1,2,7,42,429,7436,218348], [guessRat], [guessProduct]).1.function",
+           "product(product(3*(3*p+2)*(3*p+4)/4/(2*p+1)/(2*p+3), p=0..q-1),q=0..n-1)")
+
+testEquals("guess([0,1,3,9,33], [guessRat], [guessSum, guessProduct]).1.function",
+           "sum(product(p+2, p=0..q-1),q=0..n-1)")
+@
+%$
+
+\eject
+\begin{thebibliography}{99}
+\bibitem{1} nothing
+\end{thebibliography}
+\end{document}
