@@ -1,3 +1,8 @@
+2009-01-13  Martin Rubey  <martin.rubey@univie.ac.at>
+
+	* src/input/mantepse.input.pamphlet: test guessing facility
+	src/input/Makefile.in: Adjust.
+
 2009-01-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	Fix issue 441.
@@ -5,7 +10,7 @@
 	multiple zeros.
 
 2009-01-13  Martin Rubey  <martin.rubey@univie.ac.at>
-
+	
 	* src/input/bugs2009.input.pamphlet: add issue #442
 
 	* src/input/bugs2009.input.pamphlet: add issues #138, #439, #436,
